package main.java.hw3;

/**
 * LoaderInterface defines the methods for loading data.
 * @author Pei-Jen Chen
 */
public interface LoaderInterface {
    boolean hasNext();
    String next();
}
